test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/unclosed_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  =
  {
  const int(1)
  ,
  const int(2)
  ;
  return
  identifier(arr)
  [
  const int(0)
  ]
  ;
  }
